--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Frontend Mentor | QR code component</title>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
 
   <link href="index.css" rel="stylesheet" type="text/css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
