--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
 <body>
 
   <!-- Card section -->
-
-    <div class="card">
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
-        <img src="images/image-qr-code.png" alt="QR-CODE">
-      </a>
-      <h2>
-        Improve your front-end skills by building projects
-      </h2>
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </p>
-    </div>
+    <main>
+      <div class="card">
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+          <img src="images/image-qr-code.png" alt="QR-CODE">
+        </a>
+        <h2>
+          Improve your front-end skills by building projects
+        </h2>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+      </div>
+    </main>
   
   <!-- Footer section -->
   <footer class="attribution">
