--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
   
   <!-- Footer section -->
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Giovanni Polidoro</a>.
+    <p>
+      Challenge by 
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by 
+      <a href="#">Giovanni Polidoro</a>.
+    </p>
   </footer>
 </body>
 </html>
