--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!-- Card section -->
     <main>
+      <h1 class="sr-only">Card QR code component flex</h1>
       <div class="card">
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
           <img src="images/image-qr-code.png" alt="QR-CODE">
